// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> should render select with 1 selected option 1`] = `
<Select
  className=""
  errorText=""
  isControlled={false}
  label=""
  name="test-name"
  onChange={[Function]}
  options={
    Object {
      "DE": "Germany",
      "US": "United states",
    }
  }
  placeholder=""
  translateErrorText={true}
  value="DE"
>
  <FormElement
    className=""
    errorText=""
    hasPlaceholder={true}
    hasUnderline={true}
    hasValue={true}
    htmlFor="test-name"
    isFocused={false}
    label=""
    placeholder=""
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv formElement"
    >
      <select
        className="css-zao20y select"
        id="test-name"
        name="test-name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value="DE"
      >
        <option
          className="option"
          key="test-name_DE"
          value="DE"
        >
          Germany
        </option>
        <option
          className="option"
          key="test-name_US"
          value="US"
        >
          United states
        </option>
      </select>
      <Underline
        hasErrorMessage={false}
        isFocused={false}
      >
        <div
          className="css-ycal4l underline"
        >
          <div
            className="css-1tpmuef"
            style={
              Object {
                "borderBottomColor": "var(--color-primary, #fa5400)",
                "transform": "scale3d(0,1,1)",
              }
            }
          />
        </div>
      </Underline>
    </div>
  </FormElement>
</Select>
`;

exports[`<Select /> should render select with 2 options 1`] = `
<Select
  className=""
  errorText=""
  isControlled={false}
  label=""
  name="test-name"
  onChange={[Function]}
  options={
    Object {
      "DE": "Germany",
      "US": "United states",
    }
  }
  placeholder=""
  translateErrorText={true}
  value=""
>
  <FormElement
    className=""
    errorText=""
    hasPlaceholder={true}
    hasUnderline={true}
    hasValue={false}
    htmlFor="test-name"
    isFocused={false}
    label=""
    placeholder=""
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv formElement"
    >
      <select
        className="css-zao20y select"
        id="test-name"
        name="test-name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value=""
      >
        <option
          className="option"
          key="test-name_DE"
          value="DE"
        >
          Germany
        </option>
        <option
          className="option"
          key="test-name_US"
          value="US"
        >
          United states
        </option>
      </select>
      <Underline
        hasErrorMessage={false}
        isFocused={false}
      >
        <div
          className="css-ycal4l underline"
        >
          <div
            className="css-1tpmuef"
            style={
              Object {
                "borderBottomColor": "var(--color-primary, #fa5400)",
                "transform": "scale3d(0,1,1)",
              }
            }
          />
        </div>
      </Underline>
    </div>
  </FormElement>
</Select>
`;

exports[`<Select /> should render select with no options 1`] = `
<Select
  className=""
  errorText=""
  isControlled={false}
  label=""
  name="test-name"
  onChange={[Function]}
  options={Object {}}
  placeholder=""
  translateErrorText={true}
  value=""
>
  <FormElement
    className=""
    errorText=""
    hasPlaceholder={true}
    hasUnderline={true}
    hasValue={false}
    htmlFor="test-name"
    isFocused={false}
    label=""
    placeholder=""
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv formElement"
    >
      <select
        className="css-zao20y select"
        id="test-name"
        name="test-name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value=""
      />
      <Underline
        hasErrorMessage={false}
        isFocused={false}
      >
        <div
          className="css-ycal4l underline"
        >
          <div
            className="css-1tpmuef"
            style={
              Object {
                "borderBottomColor": "var(--color-primary, #fa5400)",
                "transform": "scale3d(0,1,1)",
              }
            }
          />
        </div>
      </Underline>
    </div>
  </FormElement>
</Select>
`;
